syntax = "proto3";

package app_config;

message GetAppConfigRequest {
}

message GetAppConfigResponse {
  string theme = 1; 
}
